conf is optinal, found conf filenames are printed.

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -1,3 +1,7 @@
+# first thing you want to do is 
+# cp sample_veyepar.cfg veyepar.cfg
+# and then edit veyepar.cfg
+
 [global]
 mediadir=/home/carl/Videos/veyepar
 format=ntsc
