can add items on the fly

--- a/dj/scripts/veyepar.cfg
+++ b/dj/scripts/veyepar.cfg
@@ -5,4 +5,7 @@ format=ntsc
 # including setting it to False or no or 0.
 # remove the line if you don't want verbose.
 verbose=True
+client=titm
+show=doc
+
 
