--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -5,8 +5,13 @@
 [global]
 mediadir=/home/carl/Videos/veyepar
 format=ntsc
+license=13
+category=10
+rating=TV-G
+
 # setting verbose to anything sets it, 
 # including setting it to False or no or 0.
 # remove the line if you don't want verbose.
 verbose=True
+
 
