--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-svn+http://code.djangoproject.com/svn/django/trunk/#egg=django
+# svn+http://code.djangoproject.com/svn/django/trunk/#egg=django
 vobject
 python-twitter
 dabo
