correct profile in sample.cfg

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -3,8 +3,8 @@
 # and then edit veyepar.cfg
 
 [global]
-mediadir=/home/carl/Videos/veyepar
-format=ntsc
+# mediadir=/home/carl/Videos/veyepar
+format=square_ntsc
 license=13
 category=10
 rating=TV-G
