test runs start to tweet

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -6,7 +6,8 @@
 # mediadir=/home/carl/Videos/veyepar
 format=square_ntsc
 license=13
-category=10
+# 7 = Technology
+category=7
 rating=TV-G
 
 # setting verbose to anything sets it, 
