add flv to sample

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -4,6 +4,7 @@
 
 [global]
 # mediadir=/home/carl/Videos/veyepar
+tmp_dir=/tmp
 format=square_ntsc
 license=13
 # 7 = Technology
@@ -15,4 +16,9 @@ rating=TV-G
 # remove the line if you don't want verbose.
 verbose=True
 
+client=test_client
+show=test_show
+
+upload_formats=ogv flv
+# blip_user=CarlFK
 
