add flv to sample

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -1,6 +1,6 @@
-# first thing you want to do is 
-# cp sample_veyepar.cfg veyepar.cfg
-# and then edit veyepar.cfg
+# veyepar config
+# overrides defaults stored in apps, 
+# but is over ridden by command line options.
 
 [global]
 # mediadir=/home/carl/Videos/veyepar
