tests use .cft to test ntsc or pal

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -5,7 +5,7 @@
 [global]
 # mediadir=/home/carl/Videos/veyepar
 tmp_dir=/tmp
-format=square_ntsc
+dv_format=ntsc
 license=13
 # 7 = Technology
 category=7
