--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# svn+http://code.djangoproject.com/svn/django/trunk/#egg=django
-django==1.2
+svn+http://code.djangoproject.com/svn/django/trunk@15204#egg=django
+# django==1.3
 vobject
 oauth2
 # svn+http://svn.dabodev.com/dabo/trunk/#egg=dabo
