--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-svn+http://code.djangoproject.com/svn/django/trunk@15204#egg=django
+svn+http://code.djangoproject.com/svn/django/trunk#egg=django
+# svn+http://code.djangoproject.com/svn/django/trunk@15204#egg=django
 # django==1.3
 vobject
 oauth2
