--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -4,17 +4,17 @@
 
 [global]
 # mediadir=/home/carl/Videos/veyepar
-tmp_dir=/tmp
-dv_format=ntsc
-license=13
+# tmp_dir=/tmp
+# dv_format=ntsc
+# license=13
 # 7 = Technology
-category=7
-rating=TV-G
+# category=7
+# rating=TV-G
 
 # setting verbose to anything sets it, 
 # including setting it to False or no or 0.
 # remove the line if you don't want verbose.
-verbose=True
+# verbose=True
 
 client=test_client
 show=test_show
