print text not object ref

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -3,8 +3,9 @@
 # but is over ridden by command line options.
 
 [global]
-# mediadir=/home/carl/Videos/veyepar
+# media_dir=/home/carl/Videos/veyepar
 # tmp_dir=/tmp
+# load_temp=True
 # dv_format=ntsc
 # license=13
 # 7 = Technology
