--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -12,6 +12,8 @@
 # category=7
 # rating=TV-G
 
+# threads=4
+
 # setting verbose to anything sets it, 
 # including setting it to False or no or 0.
 # remove the line if you don't want verbose.
