use CC license id's

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -19,9 +19,15 @@
 # remove the line if you don't want verbose.
 # verbose=True
 
+upload_formats=mp4 
+
+lincense=CC BY-NA
+
+host_user=veyepar_test
+twitter_user=veyepar_test
+
+
 client=test_client
 show=test_show
 
-upload_formats=ogv mp4 
-# blip_user=CarlFK
 
