wad of config files

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -8,8 +8,11 @@
 # load_temp=True
 # dv_format=ntsc
 # license=13
+
+# 7 blip, Tech youtube.
 # 7 = Technology
 # category=7
+# category=Tech 
 # rating=TV-G
 
 # threads=4
