include local.cfg by default

--- a/setup/pxe/shaz/var/www/ubuntu/oneiric/preseed_local.cfg
+++ b/setup/pxe/shaz/var/www/ubuntu/oneiric/preseed_local.cfg
@@ -6,4 +6,5 @@ d-i passwd/user-password-crypted password $6$khprmotoVWYLZY2W$Gj5Y6p4R.LsXQdL2xf
 
 d-i mirror/http/proxy string http://g2a.personnelware.com:8000/
 d-i time/zone string US/Central
+# d-i mirror/http/hostname string us.archive.ubuntu.com
 
