--- a/setup/pxe/shaz/var/www/ubuntu/oneiric/preseeds.cfg
+++ b/setup/pxe/shaz/var/www/ubuntu/oneiric/preseeds.cfg
@@ -1,3 +1,3 @@
 
-d-i preseed/include string example-preseed.txt preseed_carl.cfg preseed_user.cfg preseed_local.cfg
+d-i preseed/include string example-preseed.txt preseed_carl.cfg preseed_local.cfg
 
