tune squid conf

--- a/setup/pxe/shaz/etc/squid-deb-proxy/squid-deb-proxy.conf
+++ b/setup/pxe/shaz/etc/squid-deb-proxy/squid-deb-proxy.conf
@@ -30,7 +30,7 @@ http_port 8000
 visible_hostname squid-deb-proxy
 
 # we need a big cache, some debs are huge
-maximum_object_size 512 MB
+maximum_object_size 512000
 
 # use a different dir than stock squid and default to 40G
 cache_dir ufs /var/cache/squid-deb-proxy 40000 16 256
@@ -41,8 +41,9 @@ cache_log /var/log/squid-deb-proxy/cache.log
 cache_store_log /var/log/squid-deb-proxy/store.log
 
 # tweaks to speed things up
-cache_mem 200 MB
-maximum_object_size_in_memory 10240 KB
+# cfk: pulled these because I worry the syntax is wrong and hurting
+# cache_mem 100 MB
+# maximum_object_size_in_memory 10240 KB
 
 # pid
 pid_filename /var/run/squid-deb-proxy.pid
