enable url=hostname shortcut

--- a/setup/pxe/shaz/var/www/d-i/oneiric/preseed_carl.cfg
+++ b/setup/pxe/shaz/var/www/d-i/oneiric/preseed_carl.cfg
@@ -181,10 +181,10 @@ libpam-modules/disable-screensaver      boolean true
 # This first command is run as early as possible, just after
 # preseeding is read.
 # cfk - get early script from shaz, run it.
-d-i preseed/early_command string cd /tmp && wget http://$SHAZ/ec/early_command.sh && chmod u+x early_command.sh && ./early_command.sh
+d-i preseed/early_command string cd /tmp && wget http://$url/ec/early_command.sh && chmod u+x early_command.sh && ./early_command.sh
 
 # d-i shared/default-x-display-manager lightdm ## gdm gdm3
 
 ### cfk - get late script from shaz, run it.
-d-i preseed/late_command  string cd /target/tmp && wget http://$SHAZ/lc/late.sh && chmod u+x late.sh && chroot /target /tmp/late.sh
+d-i preseed/late_command  string cd /target/tmp && wget http://$url/lc/late.sh && chmod u+x late.sh && chroot /target /tmp/late.sh
 
