remove duplicate preseed lines

--- a/setup/pxe/shaz/var/www/d-i/oneiric/preseed_carl.cfg
+++ b/setup/pxe/shaz/var/www/d-i/oneiric/preseed_carl.cfg
@@ -1,36 +1,19 @@
 # Locale sets language and country.
 d-i debian-installer/locale string en_US.UTF-8
 
-# Keyboard selection.
-# Disable automatic (interactive) keymap detection.
-d-i console-setup/ask_detect boolean false
-d-i console-setup/layoutcode string us
-
-### Network configuration
-# netcfg will choose an interface that has link if possible. This makes it
-# skip displaying a list if there is more than one interface.
-d-i netcfg/choose_interface select auto
-
-# Disable that annoying WEP key dialog.
-d-i netcfg/wireless_wep string
-
-d-i mirror/protocol string http
-d-i mirror/country string manual
 d-i mirror/http/hostname string us.archive.ubuntu.com
-d-i mirror/http/directory string /ubuntu
+# d-i mirror/protocol string http
 
 d-i partman-auto/disk string /dev/sda
 d-i partman-auto/method string regular
-d-i partman-auto/choose_recipe select atomic
-d-i partman/confirm_write_new_label boolean true
-d-i partman/choose_partition select finish
-d-i partman/confirm boolean true
-d-i partman/confirm_nooverwrite boolean true
+# d-i partman-auto/choose_recipe select atomic
+# d-i partman/confirm_write_new_label boolean true
+# d-i partman/choose_partition select finish
+# d-i partman/confirm boolean true
+# d-i partman/confirm_nooverwrite boolean true
 
 
 ### Clock and time zone setup
-# Controls whether or not the hardware clock is set to UTC.
-d-i clock-setup/utc boolean true
 
 # You may set this to any valid setting for $TZ; see the contents of
 # /usr/share/zoneinfo/ for valid values.
@@ -66,24 +49,9 @@ d-i apt-setup/local0/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=
 ### ubuntu debugging stuff
 d-i apt-setup/local1/repository string http://ddebs.ubuntu.com oneiric main restricted universe multiverse
 d-i apt-setup/local1/comment string ubuntu debugging stuff
-d-i apt-setup/local1/source boolean true
+# apt-get update doesn't like haveing a deb-src for this, so don't add it:
+d-i apt-setup/local1/source boolean false
 d-i apt-setup/local1/key string http://ddebs.ubuntu.com/dbgsym-release-key.asc
-# d-i apt-setup/local1/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x428D7C015E0577F2
-
-# d-i apt-setup/local2/repository string http://ppa.launchpad.net/maxb/ppa/ubuntu natty main
-# d-i apt-setup/local2/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x9CC1A69E3DC9DB5420FAB05AD701E18D0B717EF0
-
-### cfk - not melt - but stuff 
-# d-i apt-setup/local0/repository string http://ppa.launchpad.net/intuitivenipple/video-editors/ubuntu karmic main
-# d-i apt-setup/local0/comment string intuitivenipple PPA
-# d-i apt-setup/local0/source boolean true
-# d-i apt-setup/local0/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x727D031129047922
-
-### cfk - melt
-# d-i apt-setup/local1/repository string http://ppa.launchpad.net/sunab/sunab2/ubuntu precise main
-# d-i apt-setup/local1/comment string mlt PPA
-# d-i apt-setup/local1/source boolean true
-# d-i apt-setup/local1/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0xB5115B98AA836CA8
 
 ### cfk - theora
 d-i apt-setup/local2/repository string http://ppa.launchpad.net/theora/ppa/ubuntu oneiric main
@@ -97,17 +65,24 @@ d-i apt-setup/local2/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=
 # d-i apt-setup/local3/source boolean true
 # d-i apt-setup/local3/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x51464F3A7DD2460F
 
+
+### cfk - kdenlive NLE
+# d-i apt-setup/local0/repository string http://ppa.launchpad.net/intuitivenipple/video-editors/ubuntu karmic main
+# d-i apt-setup/local0/comment string intuitivenipple PPA
+# d-i apt-setup/local0/source boolean true
+# d-i apt-setup/local0/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x727D031129047922
+
+### cfk - melt
+# d-i apt-setup/local1/repository string http://ppa.launchpad.net/sunab/sunab2/ubuntu precise main
+# d-i apt-setup/local1/comment string mlt PPA
+# d-i apt-setup/local1/source boolean true
+# d-i apt-setup/local1/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0xB5115B98AA836CA8
+
 ### cfk - ffmpeg
 # d-i apt-setup/local3/repository string http://ppa.launchpad.net/freshmedia/ppa/ubuntu precise main
 # d-i apt-setup/local3/comment string ffmpeg PPA
 # d-i apt-setup/local3/source boolean true
 # d-i apt-setup/local3/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0xBB5F483440B62BF8
-
-# Enable deb-src lines
-#d-i apt-setup/local0/source boolean true
-# URL to the public key of the local repository
-#d-i apt-setup/local0/key string http://local.server/key
-
 
 
 ### Account setup
@@ -128,33 +103,14 @@ d-i apt-setup/local2/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=
 #d-i passwd/user-fullname string Ubuntu User
 # d-i passwd/username string user
 # Normal user's password, either in clear text
-# d-i passwd/user-password password foo
-# d-i passwd/user-password-again password foo
+# d-i passwd/user-password password insecure
+# d-i passwd/user-password-again password insecure
 # or encrypted using an MD5 hash.
 
 d-i passwd/user-default-groups string audio cdrom video juser adm dialout cdrom plugdev lpadmin admin sudo
 # sambashare
 
-# Set to true if you want an encrypted private directory for the first user.
-## d-i user-setup/encrypted-private boolean false
-d-i user-setup/encrypt-home boolean false
-
 d-i pkgsel/update-policy string none
-
-# This is fairly safe to set, it makes grub install automatically to the MBR
-# if no other operating system is detected on the machine.
-d-i grub-installer/only_debian boolean true
-
-# This one makes grub-installer install to the MBR if if finds some other OS
-# too, which is less safe as it might not be able to boot that other OS.
-d-i grub-installer/with_other_os boolean true
-
-### Package selection
-# tasksel tasksel/first multiselect ubuntu-standard, ubuntu-desktop
-# d-i foo/bar string value
-# d-i foo/bar seen false
-# tasksel tasksel/first seen false
-# tasksel tasksel/first multiselect ubuntu-standard
 
 ### extra packages
 
