pulled taks from .cfg/default

--- a/setup/pxe/shaz/var/www/d-i/oneiric/preseed_carl.cfg
+++ b/setup/pxe/shaz/var/www/d-i/oneiric/preseed_carl.cfg
@@ -1,17 +1,14 @@
 # Locale sets language and country.
-d-i debian-installer/locale string en_US.UTF-8
+# root@pc8:~# locale
+# LANG=en_US.UTF-8
+# d-i debian-installer/locale string en_US.UTF-8
 
 d-i mirror/http/hostname string us.archive.ubuntu.com
-# d-i mirror/protocol string http
 
-d-i partman-auto/disk string /dev/sda
-d-i partman-auto/method string regular
-# d-i partman-auto/choose_recipe select atomic
-# d-i partman/confirm_write_new_label boolean true
-# d-i partman/choose_partition select finish
-# d-i partman/confirm boolean true
-# d-i partman/confirm_nooverwrite boolean true
-
+# whack the first hard drive
+# "If the system has only one disk the installer will default to using that"
+# d-i partman-auto/disk string /dev/sda
+# d-i partman-auto/method string regular
 
 ### Clock and time zone setup
 
@@ -26,10 +23,6 @@ d-i apt-setup/restricted boolean true
 d-i apt-setup/universe boolean true
 d-i apt-setup/multiverse boolean true
 # d-i apt-setup/backports boolean true
-
-# Uncomment this to avoid adding security sources, or
-# add a hostname to use a different server than security.ubuntu.com.
-# d-i apt-setup/security_host string
 
 # Additional repositories, local[0-9] available
 #d-i apt-setup/local0/repository string http://local.server/ubuntu feisty main
@@ -84,32 +77,6 @@ d-i apt-setup/local2/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=
 # d-i apt-setup/local3/source boolean true
 # d-i apt-setup/local3/key string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0xBB5F483440B62BF8
 
-
-### Account setup
-# Skip creation of a root account (normal user account will be able to
-# use sudo). The default is false; preseed this to true if you want to set
-# a root password.
-#d-i passwd/root-login boolean false
-# Alternatively, to skip creation of a normal user account.
-#d-i passwd/make-user boolean false
-
-# Root password, either in clear text
-#d-i passwd/root-password password r00tme
-#d-i passwd/root-password-again password r00tme
-# or encrypted using an MD5 hash.
-#d-i passwd/root-password-crypted password [MD5 hash]
-
-# To create a normal user account.
-#d-i passwd/user-fullname string Ubuntu User
-# d-i passwd/username string user
-# Normal user's password, either in clear text
-# d-i passwd/user-password password insecure
-# d-i passwd/user-password-again password insecure
-# or encrypted using an MD5 hash.
-
-d-i passwd/user-default-groups string audio cdrom video juser adm dialout cdrom plugdev lpadmin admin sudo
-# sambashare
-
 d-i pkgsel/update-policy string none
 
 ### extra packages
@@ -132,7 +99,6 @@ d-i finish-install/reboot_in_progress note
 ### Preseeding other packages
 glibc/disable-screensaver       boolean true
 libpam-modules/disable-screensaver      boolean true
-
 
 # This first command is run as early as possible, just after
 # preseeding is read.
