--- a/setup/pxe/shaz/var/www/d-i/oneiric/preseed_local.cfg
+++ b/setup/pxe/shaz/var/www/d-i/oneiric/preseed_local.cfg
@@ -1,8 +1,30 @@
 
+### Account setup
+# Skip creation of a root account (normal user account will be able to
+# use sudo). The default is false; preseed this to true if you want to set
+# a root password.
+#d-i passwd/root-login boolean false
+# Alternatively, to skip creation of a normal user account.
+#d-i passwd/make-user boolean false
 
-d-i passwd/user-fullname string Joe User
+# Root password, either in clear text
+#d-i passwd/root-password password r00tme
+#d-i passwd/root-password-again password r00tme
+# or encrypted using an MD5 hash.
+#d-i passwd/root-password-crypted password [MD5 hash]
+
+# To create a normal user account.
+#d-i passwd/user-fullname string Ubuntu User
+# d-i passwd/username string user
+# Normal user's password, either in clear text
+# d-i passwd/user-password password insecure
+# d-i passwd/user-password-again password insecure
+# or encrypted using an MD5 hash.
+
+d-i passwd/user-fullname string Ubuntu User
 d-i passwd/username string @user@
 d-i passwd/user-password-crypted password $6$khprmotoVWYLZY2W$Gj5Y6p4R.LsXQdL2xf6umhInzZ9GCG6USXB0XIl86m5.IbqSOPXJ0mxVUE7y5kGFE/arHgExAxoz0kEULiplZ.
+d-i passwd/user-default-groups string audio cdrom video juser adm dialout cdrom plugdev lpadmin admin sudo
 
 d-i mirror/http/proxy string http://g2a.personnelware.com:8000/
 d-i time/zone string US/Central
