remove IP from ddns

--- a/setup/pxe/shaz/etc/dhcp/dhcpd-ddns.conf
+++ b/setup/pxe/shaz/etc/dhcp/dhcpd-ddns.conf
@@ -9,7 +9,7 @@ ddns-rev-domainname "in-addr.arpa.";
 
 include "/etc/bind/rndc.key";
 
-zone local.example. {
+zone private. {
         primary localhost;
         key rndc-key;
        }
