--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ svn+http://code.djangoproject.com/svn/django/trunk#egg=django
 vobject
 oauth2
 progressbar
+django-debug-toolbar
 # svn+http://svn.dabodev.com/dabo/trunk/#egg=dabo
 hg+https://python-twitter.googlecode.com/hg/#egg=twitter
 feedparser
