can push to local richard

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ feedparser
 # --extra-index-url=http://dist.pinaxproject.com/dev/
 # Pinax==0.9a2.dev6
 
+git+https://github.com/willkg/steve.git
 
 hg+https://gdata-python-client.googlecode.com/hg/#egg=gdata-python-client
 # ElementTree
