--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-# svn+http://code.djangoproject.com/svn/django/trunk#egg=django
-git+https://github.com/django/django.git#egg=django
-# svn+http://code.djangoproject.com/svn/django/trunk@15204#egg=django
-# django==1.3
+# git+https://github.com/django/django.git#egg=django
+django==1.4.5
 vobject
 oauth2
 django-debug-toolbar
 # svn+http://svn.dabodev.com/dabo/trunk/#egg=dabo
-hg+https://python-twitter.googlecode.com/hg/#egg=twitter
+git+https://github.com/bear/python-twitter.git
 feedparser
 
 # --extra-index-url=http://dist.pinaxproject.com/dev/
@@ -19,7 +17,7 @@ hg+https://gdata-python-client.googlecode.com/hg/#egg=gdata-python-client
 
 progressbar
 boto
-slumber
+# slumber
 
 requests
 
