Use ~/veyepar.cfg and datetime.now() to find dir to monitor.

--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -37,3 +37,7 @@ git+https://github.com/CarlFK/google-api-python-client.git#egg=googleapiclient
 # httplib2
 
 # psycopg2
+
+# for util/dirmon.py
+git+https://github.com/maliubiao/python_inotify.git 
+
