--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -20,7 +20,7 @@ django-extensions
 # pyrax
 # till my bug fix patch hits pypi
 git+https://github.com/rackspace/pyrax.git@working#egg=pyrax
-pbr
+pbr==0.11
 prettytable
 babel
 iso8601
