--- a/setup/nodes/www/Vagrantfile
+++ b/setup/nodes/www/Vagrantfile
@@ -4,9 +4,12 @@
 VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "wheezy"
-  config.vm.box_url = "https://dl.dropboxusercontent.com/s/xymcvez85i29lym/vagrant-debian-wheezy64.box"
+  # config.vm.box = "jessie"
+  # config.vm.box_url = "https://dl.dropboxusercontent.com/s/xymcvez85i29lym/vagrant-debian-wheezy64.box"
+  config.vm.box = "debian/jessie64"
 
+  config.vm.network "forwarded_port", guest: 80, host: 8000, auto_correct: true
+  config.vm.network "forwarded_port", guest: 5432, host: 5432, auto_correct: true
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
