Various fixes;  * Adds missing ubuntu/python packages  * Fixes typo in sample_veyepar.cfg  * Adds missing addeps dict to sample_pw.py + makes this conditional in addeps.py  * Adds tests.txt to .gitignore (assume generated, shouldn't be committed)

--- a/dj/scripts/sample_veyepar.cfg
+++ b/dj/scripts/sample_veyepar.cfg
@@ -24,11 +24,10 @@
 
 upload_formats=mp4 
 
-lincense=CC BY-NA
+license=CC BY-NA
 
 host_user=veyepar_test
 twitter_user=veyepar_test
-
 
 client=test_client
 show=test_show
