osdc schedule consumer

--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -12,7 +12,7 @@ python-dateutil
 
 progressbar
 
-# boto
+boto
 internetarchive
 
 requests
@@ -46,8 +46,8 @@ git+https://github.com/CarlFK/google-api-python-client.git#egg=googleapiclient
 # for util/dirmon.py
 git+https://github.com/maliubiao/python_inotify.git 
 
+six
 python-keystoneclient
 oslo.utils
 oslo.serialization
-boto
 beautifulsoup4
