add partman-auto/choose_recipe select atomic

--- a/setup/nodes/pxe/shaz/var/www/d-i/xenial/preseed_disk.cfg
+++ b/setup/nodes/pxe/shaz/var/www/d-i/xenial/preseed_disk.cfg
@@ -1,5 +1,7 @@
 d-i user-setup/encrypt-home boolean false
 
+d-i partman-auto/choose_recipe select atomic
+
 # This makes partman automatically partition without confirmation.
 d-i partman-md/confirm boolean true
 d-i partman-partitioning/confirm_write_new_label boolean 
