update requirements.txt to 1.11 and whatever else is laying about.

--- a/setup/nodes/encode/requirements.txt
+++ b/setup/nodes/encode/requirements.txt
@@ -7,7 +7,11 @@ git+https://github.com/smarnach/pyexiftool.git
 pymediainfo
 numpy
 pypng
-# google-api-python-client
+
+google-api-python-client
+oauth2client
+
 boto
-# internetarchive
+internetarchive
 pycaption
+progressbar
