--- a/setup/nodes/www/requirements.txt
+++ b/setup/nodes/www/requirements.txt
@@ -1,4 +1,5 @@
-# requirements for deployment only
-fabric
-git+git://github.com/ronnix/fabtools.git
-jinja2
+django<2
+djangorestframework
+django_extensions
+# gunicorn
+psycopg2
