don't use deprecated auth

--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -31,7 +31,9 @@ django-filter
 
 # git+https://github.com/CarlFK/google-api-python-client.git#egg=googleapiclient
 google-api-python-client
-oauth2client
+google-auth-httplib2
+google-auth-oauthlib
+
 # httplib2
 
 psycopg2-binary
