--- a/setup/ansible/roles/site/tasks/gunicorn.yml
+++ b/setup/ansible/roles/site/tasks/gunicorn.yml
@@ -3,12 +3,13 @@
 - name: python and friends
   apt:
     name:
+    - python3-full
     - python3-venv
     - python3-pip
 
-- name: Install virtualenv via pip
-  pip:
-    name: virtualenv
+# - name: Install virtualenv via pip
+#  pip:
+#    name: virtualenv
 # executable: pip3
 
 # Ensure gunicorn is installed
@@ -18,6 +19,7 @@
     - gunicorn
     - uvicorn
     virtualenv: "{{ app_dir }}/venv"
+    virtualenv_command: 'python3 -m venv'
 
 # Copy gunicorn socket file
 - name: copy gunicorn socket file to /etc/systemd/system/gunicorn.socket
